data/derived/fa15/progs/unify/prog2208.ml.out
Characters 118-130:
  | hd :: tl -> a ^ sep ^ hd in
                ^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         string list
